F10 - Road Networks form from the hub to other cities