@@ -2,7 +2,6 @@ package ca.mcmaster.cas.se2aa4.island.CityGen.MeshGraph;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
 
 
@@ -11,20 +10,14 @@ import ca.mcmaster.cas.se2aa4.pathfinder.Graph.Path;
 
 public class SegmentPath extends Path<CentroidNode> {
 
-    public SegmentPath(){
-        super();
-    }
-
-    public SegmentPath(LinkedList<CentroidNode> path){
-        super(path);
-    }
-
-    public List<Segment> toSegmentList(){
+    public static List<Segment> toSegmentList(Path<CentroidNode> p){
+        if(p.size() < 0) return new ArrayList<>();
+        List<CentroidNode> path = p.getList();
         List<Segment> segments = new ArrayList<>();
-        CentroidNode previousNode = this.path.getFirst();
-        for(CentroidNode currentNode : this.path){
+        CentroidNode previousNode = path.get(0);
+        for(CentroidNode currentNode : path){
             if(currentNode == previousNode) continue;
-            Segment s = Segment.newBuilder().setV1Idx(previousNode.id).setV2Idx(currentNode.id).build();
+            Segment s = Segment.newBuilder().setV1Idx(previousNode.centroidIdx).setV2Idx(currentNode.centroidIdx).build();
             segments.add(s);
             previousNode = currentNode;
         }
